vpn/archlinux/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Sun Oct  5 08:47:43 2014
*security
:INPUT ACCEPT [1275126:239984690]
:FORWARD ACCEPT [2279168:2150072184]
:OUTPUT ACCEPT [1926669:2517000221]
COMMIT
# Completed on Sun Oct  5 08:47:43 2014
# Generated by iptables-save v1.4.21 on Sun Oct  5 08:47:43 2014
*raw
:PREROUTING ACCEPT [3586744:2443777352]
:OUTPUT ACCEPT [1926669:2517000221]
COMMIT
# Completed on Sun Oct  5 08:47:43 2014
# Generated by iptables-save v1.4.21 on Sun Oct  5 08:47:43 2014
*nat
:PREROUTING ACCEPT [244:15377]
:INPUT ACCEPT [463:29393]
:OUTPUT ACCEPT [654:40369]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i ppp+ -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 1983
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o ppp+ -j MASQUERADE
COMMIT
# Completed on Sun Oct  5 08:47:43 2014
# Generated by iptables-save v1.4.21 on Sun Oct  5 08:47:43 2014
*mangle
:PREROUTING ACCEPT [3586754:2443778077]
:INPUT ACCEPT [1275136:239985415]
:FORWARD ACCEPT [2279168:2150072184]
:OUTPUT ACCEPT [1926669:2517000221]
:POSTROUTING ACCEPT [4205840:4667072570]
COMMIT
# Completed on Sun Oct  5 08:47:43 2014
# Generated by iptables-save v1.4.21 on Sun Oct  5 08:47:43 2014
*filter
:INPUT ACCEPT [22723:11216374]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [16299:3736654]
-A INPUT -i ppp+ -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 53 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 1983 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 1983 -j DROP
-A FORWARD -j ACCEPT
-A OUTPUT -o ppp+ -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
COMMIT
# Completed on Sun Oct  5 08:47:43 2014
